--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,10 +3,12 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/colorPrimary3</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark3</item>
+        <item name="colorAccent">@color/colorAccent3</item>
     </style>
+
+
 
     <!-- The AppThemePink style theme inherits from the default theme (same as above)
      and only changes the key colors and adds more properties to it  -->
@@ -19,14 +21,22 @@
         <item name="android:textSize">@dimen/fontsize</item>
     </style>
 
+    <style name="AppThemeBlue" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorPrimary">@color/colorPrimary3</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark3</item>
+        <item name="colorAccent">@color/colorAccent3</item>
+        <item name="android:textColor">@color/colorGrey1</item>
+        <item name="android:textSize">@dimen/fontsize</item>
+    </style>
+
     <!-- This style is set up to give special styling to all of my EditText boxes
          I can apply this style tag to my EditText tags and these fields will all be applied.
          This is a way to have a preset list of settings without having to copy/paste them everywhere
          notice that within the style settings I can still refer to the colors adn dimens files-->
 
     <style name="editTextSettings">
-        <item name="android:background">@color/colorTint</item>
-        <item name="android:textColor">@color/colorGrey</item>
+        <item name="android:background">@color/colorTint1</item>
+        <item name="android:textColor">@color/colorGrey1</item>
         <item name="android:padding">@dimen/editTextPadding</item>
         <item name="android:layout_width">@dimen/editTextWidth</item>
         <item name="android:layout_height">@dimen/editTextHeight</item>
